fix array index when empty array SERVER-1082